Make script JBang version independent